--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,11 @@ body,
     flex-direction: column;
     width: 100%;
     font-family: "DM Sans", sans-serif;
-    @apply text-gray-500;
+    @apply text-gray-500 md:text-lg;
 }
 
 .main-content {
-    padding-top: 100px; 
+    padding-top: 50px; 
     padding-left: 60px;
     padding-right: 60px;
     min-height: 100vh; /* Ensure that app is at least the height of the viewport */
