--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,11 @@ body,
     @apply text-gray-500 md:text-lg;
 }
 
+
 .main-content {
-    padding-top: 50px; 
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-top: 20px; 
+    padding-left: 20px;
+    padding-right: 20px;
     min-height: 100vh; /* Ensure that app is at least the height of the viewport */
     display: flex;
     flex-direction: column;
@@ -26,3 +27,5 @@ body,
     font-family: "DM Sans", sans-serif;
     @apply text-gray-500;/* Replace [Navbar_Height] with the actual height of your navbar */
   }
+
+  /* Add a media query for small screens because the padding is too large for small screens (xs xxs) but is ok for larger screens (md)*/ 
